# minifly

./: .gitignore  .mcp.json.template  ACHIEVEMENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MCP_SETUP.md  NOTICE  PUBLISHING.md  README.md  RELEASE.md  minifly-api-config.lcov  minifly-partial-coverage.lcov  publish-release.sh
data/litefs/configs/: 00e7bfae776bef9.yml  05f581f6893eb42.yml  8144f49f0807e5b.yml  82d07630a15ae66.yml  8c3c9aedd247f4c.yml  8f0ddb4fc7a41ca.yml  d14c48bb5403ee5.yml  d6841e7f78472b3.yml  d73711feaa4ff15.yml  d936458ee617bed.yml
docs/: Dockerfile  README.md  deploy.sh  docusaurus.config.js  fly.toml  package-lock.json  package.json  sidebars.js
docs/blog/: 2024-06-22-introducing-minifly.md  authors.yml
docs/docs/: api-reference.md  getting-started.md  production-config-compatibility.md
docs/docs/cli-reference/: apps.md  deploy.md  dev.md  index.md  init.md  logs.md  machines.md  overview.md  proxy.md  secrets.md  serve.md  status.md  stop.md
docs/docs/examples/: basic-app.md  index.md  production-config.md  rust-axum.md  todo-auth-app.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
examples/: README.md  basic_usage.rs  litefs_cluster.rs
examples/basic-app/: README.md  fly.toml
examples/multi-config-example/: Dockerfile  README.md  fly.production.toml  fly.staging.toml  fly.toml  litefs.production.yml  litefs.yml
examples/multi-tenant-app/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  litefs.yml  run-dev.sh  run-local.sh  run.sh
examples/multi-tenant-app/migrations/: 001_initial.sql
examples/multi-tenant-app/src/: config.rs  db.rs  handlers.rs  main.rs  middleware.rs
examples/multi-tenant-app/templates/: base.html  index.html  tenant.html
examples/production-config/: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  litefs.yml  run-demo.sh  test-features.sh
examples/production-config/src/: main.rs
examples/todo-auth-app/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  fly.toml  get-url.sh  run.sh
examples/todo-auth-app/migrations/: 001_initial.sql
examples/todo-auth-app/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  state.rs  templates.rs  tenant.rs
examples/todo-auth-app/src/handlers/: auth.rs  dashboard.rs  home.rs  mod.rs  todos.rs
examples/todo-auth-app/static/css/: style.css
examples/todo-auth-app/static/js/: app.js
examples/todo-auth-app/templates/: base.html  dashboard.html  home.html  login.html  signup.html
minifly/: Cargo.toml  README.md
minifly-api/: Cargo.toml
minifly-api/migrations/: .gitkeep  001_initial.sql
minifly-api/src/: config.rs  docker.rs  error.rs  health.rs  lib.rs  main.rs  state.rs
minifly-api/src/handlers/: admin.rs  apps.rs  health.rs  logs.rs  machines.rs  mod.rs  volumes.rs
minifly-api/src/middleware/: auth.rs  mod.rs  region.rs
minifly-api/src/state/: tests.rs
minifly-api/tests/: dns_test.rs  env_translation_test.rs  test_api_apps.rs  test_api_health.rs  test_api_machines.rs  test_api_volumes.rs
minifly-api/tests/common/: mod.rs
minifly-cli/: Cargo.toml
minifly-cli/src/: client.rs  config.rs  main.rs
minifly-cli/src/commands/: apps.rs  dependencies.rs  deploy.rs  dev.rs  init.rs  logs.rs  machines.rs  mod.rs  proxy.rs  secrets.rs  serve.rs  status.rs  stop.rs
minifly-cli/tests/: test_cli_basic.rs
minifly-core/: Cargo.toml
minifly-core/src/: error.rs  lib.rs  types.rs
minifly-core/src/models/: app.rs  lease.rs  machine.rs  mod.rs  volume.rs
minifly-litefs/: Cargo.toml
minifly-litefs/src/: config.rs  lib.rs  manager.rs  process.rs  server.rs
minifly-logging/: Cargo.toml
minifly-logging/src/: lib.rs
minifly-network/: Cargo.toml
minifly-network/src/: dns.rs  lib.rs
minifly/src/: client.rs  config.rs  lib.rs  logging.rs  main.rs  types.rs
minifly/src/commands/: apps.rs  deploy.rs  dev.rs  init.rs  logs.rs  machines.rs  mod.rs  proxy.rs  serve.rs  status.rs  stop.rs
tests/: README.md
