[package]
name = "minifly-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "API server for Minifly - Local Fly.io development simulator"
keywords = ["fly", "flyio", "development", "api", "server"]
categories = ["development-tools", "simulation"]

[dependencies]
minifly-core = { version = "0.1.3", path = "../minifly-core" }
minifly-litefs = { version = "0.1.3", path = "../minifly-litefs" }
minifly-logging = { version = "0.1.3", path = "../minifly-logging" }
minifly-network = { version = "0.1.3", path = "../minifly-network" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
bollard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hyper = "1.4"
futures = "0.3"
hex = "0.4"

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
pretty_assertions = { workspace = true }