[package]
name = "minifly-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for Minifly - Local Fly.io development simulator with incredible DX"
readme = "../README.md"
keywords = ["fly", "flyio", "development", "cli", "simulator"]
categories = ["command-line-utilities", "development-tools", "simulation"]

[[bin]]
name = "minifly"
path = "src/main.rs"

[dependencies]
minifly-core = { version = "0.2.1", path = "../minifly-core" }
minifly-logging = { version = "0.2.1", path = "../minifly-logging" }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client and streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-util = "0.7"

# Terminal output
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.16"

# Configuration
dirs = "5.0"
toml = { workspace = true }

# File watching
notify = "4.0"

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
pretty_assertions = { workspace = true }
assert_cmd = "2.0"
predicates = "3.0"