[package]
name = "minifly-litefs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "LiteFS integration for Minifly - Local Fly.io development simulator"
keywords = ["fly", "flyio", "development", "litefs", "sqlite"]
categories = ["development-tools", "simulation", "database"]

[dependencies]
minifly-core = { version = "0.2.0", path = "../minifly-core" }

tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }