[package]
name = "minifly-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true