[package]
name = "minifly-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Structured logging for Minifly - Local Fly.io development simulator"
keywords = ["fly", "flyio", "development", "logging", "tracing"]
categories = ["development-tools", "simulation"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true