[package]
name = "minifly-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Network and DNS management for Minifly - Local Fly.io development simulator"
keywords = ["fly", "flyio", "development", "network", "dns"]
categories = ["development-tools", "simulation", "network-programming"]

[dependencies]
minifly-core = { version = "0.2.1", path = "../minifly-core" }

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }