[package]
name = "multi-tenant-app"
version = "0.1.0"
edition = "2021"

# Exclude from workspace
[workspace]

[dependencies]
# Web framework
axum = { version = "0.6", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }

# Templating
askama = "0.11"
askama_axum = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Development
dotenvy = "0.15"