[package]
name = "todo-auth-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Authentication
argon2 = "0.5"
rand = "0.8"

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Environment variables
dotenvy = "0.15"

# Image handling
image = "0.24"
base64 = "0.21"

# HTTP client for tenant app creation
reqwest = { version = "0.12", features = ["json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Exclude from workspace
[workspace]